--- a/app/src/main/res/layout/cell_contact.xml
+++ b/app/src/main/res/layout/cell_contact.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="15"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
